Bug 7800 - tar(1) does not recognize --gunzip option
Summary: tar(1) does not recognize --gunzip option
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: gnu (show other bugs)
Version: 2.2.6-RELEASE
Hardware: Any Any
: Normal Affects Only Me
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 1998-09-01 21:00 UTC by Archie Cobbs
Modified: 2000-01-24 21:39 UTC (History)
0 users

See Also:


Attachments
file.diff (458 bytes, patch)
1998-09-01 21:00 UTC, Archie Cobbs
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Archie Cobbs 1998-09-01 21:00:00 UTC
	tar(1) does not recognize --gunzip option,
	though the man page lists it.

How-To-Repeat: 
	$ tar --extract --gunzip -f -
	tar: unrecognized option `--gunzip'
	tar: Unknown option.  Use 'tar --help' for a complete list of options.
Comment 1 Archie Cobbs freebsd_committer freebsd_triage 2000-01-24 21:39:25 UTC
State Changed
From-To: open->closed

Patch applied.