Fix typo for the flag ``--ungzip'' which should have been ``--gunzip'' as is documented in the man page.  Retain the older mistaken version of the flag for backwards compatibility in case anybody is using it. Add $FreeBSD$ tag as cvs requires it.

PR:		gnu/7800


git-svn-id: svn+ssh://svn.freebsd.org/base/head@56560 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f